--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -11,19 +11,25 @@
 }
 
 nav h3 {
-    padding-left: 15rem;
+    margin-left: 15rem;
     font-family: Cursive;
     font-size: 2rem;
 }
 
 .routelink {
     font-weight: bold;
-    padding-right: 20px;
+    margin-right: 20px;
     text-decoration: none;
 }
 
-.routelink:hover{
+.routelink:hover {
     color: aliceblue;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.routelink:active {
+    color:rgb(19, 151, 19);
     font-weight: bold;
     font-size: 20px;
 }
